--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<!-- <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.480/build/spline-viewer.js"></script> -->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
